[project]

name = "gage"
version = "0.1.1"
authors = [
  { name="Garrett Smith", email="garrett@placeon.earth" },
]
description = "Model evaluation and publishing toolkit"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.1.7",
    "chardet>=5.2.0",
    "human-readable>=1.3.4",
    "jschon>=0.11.1",
    "lark>=1.1.9",
    "libcst>=1.3.1",
    "natsort>=8.4.0",
    "proquint>=0.2.1",
    "psutil>=5.9.8",
    "python-ulid>=2.4.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "rich>=13.7.1",
    "setuptools>=69.2.0",
    "tomli>=2.0.1",
    "gage-typer>=0.9.0",
]

[project.optional-dependencies]

dev = [
    "black",
    "groktest",
]

[tool.setuptools.package-data]

gage = [
    "*.schema.json",
    "help/*.md"
]

[project.scripts]

gage = "gage.__main__:main"

[project.urls]

"Homepage" = "https://github.com/gageml/gage"
"Bug Tracker" = "https://github.com/gageml/gage/issues"

[tool.black]

skip-string-normalization = true
extend-exclude = "/tests/|/gage/_vendor/"

[tool.groktest]

include = "tests/*.md"
python.init = "from gage._internal.test import *"
parse.functions = "gage._internal.test"
